fix sizing issues on mobile and desktop screens using media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Nanum+Gothic&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    text-align: center;
     font-family: 'Comfortaa', cursive;
     color: #1F2E24;
+    text-decoration: none;
 }
 
 body {
@@ -27,23 +24,28 @@ h2 {
     width: 25%;
 }
 
+.score-area {
+    text-align: center;
+}
+
 #reset-game {
     color: #9db0a3;
     background-color: #1F2E24;
-    font-size: 30px;
+    font-size: 20px;
     size: 10px;
-    border: 5px;
-    margin: 3%;
+    font-size: 30px;
+    background-color: #1F2E24;
+    color: #9db0a3;
+    border: 2px #9db0a3 solid;
     border-radius: 10px;
-    border: 5px #207c3d;
-    padding: 2px;
+    padding: 10px;
 }
 
 #reset-game:hover {
-    color: #9db0a3;
-    background-color: #215100;
-    border-color: #1F2E24;
-    border: 1px;
+    background-color: #9db0a3;
+    color: #1F2E24;
+    border: 2px #1F2E24 solid;
+    border-radius: 10px;
 }
 
 h1 {
@@ -59,11 +61,37 @@ h1 {
 }
 
 .game-rules {
-    float: right;
+    text-align: center;
 }
 
 #game-rules-image {
+    text-align: center;
     width: 70%;
+}
+
+footer {
+    width: 100%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    display: inline;
+    font-size: 30px;
+}
+
+#footer-links {
+    margin-left: 19%;
+    margin-right: 19%;
+    background-color: #1F2E24;
+    color: #9db0a3;
+    border: 2px #9db0a3 solid;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+#footer-links:hover {
+    background-color: #9db0a3;
+    color: #1F2E24;
+    border: 2px #1F2E24 solid;
+    border-radius: 10px;
 }
 
 #image-404 {
@@ -88,12 +116,21 @@ h1 {
 
 @media screen and (max-width: 950px) {
 
+    * {
+        margin: 0;
+    }
+
     .game-button {
         text-align: center;
         width: 30%;
     }
 
     h2 {
+        font-size: 20px;
+        padding-bottom: 2%;
+    }
+    
+    #reset-game {
         font-size: 20px;
     }
 
@@ -104,5 +141,28 @@ h1 {
 
     #game-rules-image {
         width: 80%;
+        padding-bottom: 10%;
     }
+
+    footer {
+        font-size: 20px;
+    }
+
+    #footer-links {
+        margin-left: 9%;
+        margin-right: 9%;
+        background-color: #1F2E24;
+        color: #9db0a3;
+        border: 2px #9db0a3 solid;
+        border-radius: 10px;
+        padding: 10px;
+    }
+
+    #footer-links:hover {
+        background-color: #9db0a3;
+        color: #1F2E24;
+        border: 2px #1F2E24 solid;
+        border-radius: 10px;
+    }
+
 }
